updated project files (16/12/2025)