@@ -3,6 +3,7 @@ package com.oerms.question.service;
 import com.oerms.common.dto.ApiResponse;
 import com.oerms.common.exception.BadRequestException;
 import com.oerms.common.exception.ResourceNotFoundException;
+import com.oerms.common.exception.ServiceException;
 import com.oerms.common.exception.UnauthorizedException;
 import com.oerms.common.util.JwtUtils;
 import com.oerms.question.client.ExamServiceClient;
@@ -23,6 +24,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -34,31 +36,17 @@ public class QuestionService {
     private final QuestionRepository questionRepository;
     private final ExamServiceClient examServiceClient;
 
-    /**
-     * Creates a new question for an exam
-     *
-     * @param request Question creation request
-     * @param authentication Current user authentication
-     * @return Created question DTO
-     */
     @Transactional
     @CacheEvict(value = {"examQuestions", "examQuestionsStudent", "questionStatistics"}, key = "#request.examId")
     public QuestionDTO createQuestion(CreateQuestionRequest request, Authentication authentication) {
-        // Verify exam exists and user has permission
+        log.info("Attempting to create a question for examId: {}", request.getExamId());
         ExamDTO exam = getExamOrThrow(request.getExamId());
-        log.debug("Creating question for exam: {} (Title: {}, Teacher: {})",
-                exam.getId(), exam.getTitle(), exam.getTeacherId());
-
         verifyExamOwnership(exam, authentication);
         validateQuestion(request);
 
-        // Calculate order index
         Integer maxOrderIndex = questionRepository.findMaxOrderIndexByExamId(request.getExamId());
-        int orderIndex = request.getOrderIndex() != null
-                ? request.getOrderIndex()
-                : (maxOrderIndex != null ? maxOrderIndex + 1 : 1);
+        int orderIndex = (request.getOrderIndex() != null) ? request.getOrderIndex() : (maxOrderIndex != null ? maxOrderIndex + 1 : 1);
 
-        // Build and save question
         Question question = Question.builder()
                 .examId(request.getExamId())
                 .questionText(request.getQuestionText())
@@ -72,32 +60,22 @@ public class QuestionService {
                 .imageUrl(request.getImageUrl())
                 .build();
 
-        question.setCreatedBy(JwtUtils.getUsername(authentication));
         question = questionRepository.save(question);
-
-        log.info("Question created: {} for exam: {} by user: {}",
-                question.getId(), request.getExamId(), JwtUtils.getUsername(authentication));
-
+        log.info("Successfully created question with id: {} for examId: {}", question.getId(), request.getExamId());
         return mapToDTO(question);
     }
 
-    /**
-     * Gets all questions for an exam (with answers - for teachers/admins)
-     */
     @Cacheable(value = "examQuestions", key = "#examId")
     public List<QuestionDTO> getExamQuestions(UUID examId) {
-        log.debug("Fetching questions for exam: {}", examId);
+        log.info("Fetching all questions for examId: {}", examId);
         List<Question> questions = questionRepository.findByExamIdOrderByOrderIndexAsc(examId);
-        log.debug("Found {} questions for exam: {}", questions.size(), examId);
-        return questions.stream().map(this::mapToDTO).collect(Collectors.toList());
+        log.info("Found {} questions for examId: {}", questions.size(), examId);
+        return questions.stream().map(this::mapToDTO).toList();
     }
 
-    /**
-     * Gets questions for students (without answers)
-     */
     @Cacheable(value = "examQuestionsStudent", key = "#examId + '-' + #shuffle")
     public List<StudentQuestionDTO> getExamQuestionsForStudent(UUID examId, boolean shuffle) {
-        log.debug("Fetching student questions for exam: {} (shuffle: {})", examId, shuffle);
+        log.info("Fetching questions for student for examId: {}. Shuffle enabled: {}", examId, shuffle);
         List<Question> questions = questionRepository.findByExamIdOrderByOrderIndexAsc(examId);
         List<StudentQuestionDTO> studentQuestions = questions.stream()
                 .map(this::mapToStudentDTO)
@@ -105,341 +83,226 @@ public class QuestionService {
 
         if (shuffle) {
             Collections.shuffle(studentQuestions);
-            log.debug("Shuffled {} questions for exam: {}", studentQuestions.size(), examId);
+            log.info("Shuffled {} questions for examId: {}", studentQuestions.size(), examId);
         }
-
+        log.info("Returning {} questions for student for examId: {}", studentQuestions.size(), examId);
         return studentQuestions;
     }
 
-    /**
-     * Gets a single question by ID
-     */
     public QuestionDTO getQuestion(UUID questionId) {
-        log.debug("Fetching question: {}", questionId);
+        log.info("Fetching question with id: {}", questionId);
         Question question = questionRepository.findById(questionId)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "Question not found with id: " + questionId));
+                .orElseThrow(() -> {
+                    log.error("Question not found with id: {}", questionId);
+                    return new ResourceNotFoundException("Question not found with id: " + questionId);
+                });
         return mapToDTO(question);
     }
 
-    /**
-     * Updates an existing question
-     */
-    @Transactional
-    @CacheEvict(value = {"examQuestions", "examQuestionsStudent", "questionStatistics"}, key = "#result.examId")
-    public QuestionDTO updateQuestion(UUID questionId, UpdateQuestionRequest request, Authentication authentication) {
-        Question question = questionRepository.findById(questionId)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "Question not found with id: " + questionId));
+    public List<QuestionDTO> getQuestionsByIds(List<UUID> questionIds) {
+        log.info("Fetching a batch of {} questions by IDs.", questionIds.size());
+        if (questionIds.isEmpty()) {
+            log.warn("Received request to fetch questions with an empty ID list.");
+            return Collections.emptyList();
+        }
+        List<Question> questions = questionRepository.findAllById(questionIds);
+        log.info("Found {} questions out of {} requested.", questions.size(), questionIds.size());
+        if (questions.size() != questionIds.size()) {
+            List<UUID> foundIds = questions.stream().map(Question::getId).toList();
+            List<UUID> missingIds = new ArrayList<>(questionIds);
+            missingIds.removeAll(foundIds);
+            log.warn("Could not find the following question IDs: {}", missingIds);
+        }
+        return questions.stream().map(this::mapToDTO).toList();
+    }
 
-        // Verify ownership
+    @Transactional
+    @CacheEvict(value = {"examQuestions", "examQuestionsStudent", "questionStatistics"}, allEntries = true)
+    public QuestionDTO updateQuestion(UUID questionId, UpdateQuestionRequest request, Authentication authentication) {
+        log.info("Attempting to update questionId: {}", questionId);
+        Question question = questionRepository.findById(questionId)
+                .orElseThrow(() -> new ResourceNotFoundException("Question not found with id: " + questionId));
+
         ExamDTO exam = getExamOrThrow(question.getExamId());
         verifyExamOwnership(exam, authentication);
 
-        // Update fields if provided
-        if (request.getQuestionText() != null) {
-            question.setQuestionText(request.getQuestionText());
-        }
-        if (request.getType() != null) {
-            question.setType(request.getType());
-        }
-        if (request.getMarks() != null) {
-            question.setMarks(request.getMarks());
-        }
-        if (request.getOrderIndex() != null) {
-            question.setOrderIndex(request.getOrderIndex());
-        }
-        if (request.getOptions() != null) {
-            question.setOptions(request.getOptions());
-        }
-        if (request.getCorrectAnswer() != null) {
-            question.setCorrectAnswer(request.getCorrectAnswer());
-        }
-        if (request.getExplanation() != null) {
-            question.setExplanation(request.getExplanation());
-        }
-        if (request.getDifficultyLevel() != null) {
-            question.setDifficultyLevel(request.getDifficultyLevel());
-        }
-        if (request.getImageUrl() != null) {
-            question.setImageUrl(request.getImageUrl());
-        }
+        if (request.getQuestionText() != null) question.setQuestionText(request.getQuestionText());
+        if (request.getType() != null) question.setType(request.getType());
+        if (request.getMarks() != null) question.setMarks(request.getMarks());
+        if (request.getOrderIndex() != null) question.setOrderIndex(request.getOrderIndex());
+        if (request.getOptions() != null) question.setOptions(request.getOptions());
+        if (request.getCorrectAnswer() != null) question.setCorrectAnswer(request.getCorrectAnswer());
+        if (request.getExplanation() != null) question.setExplanation(request.getExplanation());
+        if (request.getDifficultyLevel() != null) question.setDifficultyLevel(request.getDifficultyLevel());
+        if (request.getImageUrl() != null) question.setImageUrl(request.getImageUrl());
 
-        // Validate updated question
         validateQuestionUpdate(question);
-
         question = questionRepository.save(question);
-        log.info("Question updated: {} for exam: {} by user: {}",
-                questionId, question.getExamId(), JwtUtils.getUsername(authentication));
-
+        log.info("Successfully updated questionId: {}", questionId);
         return mapToDTO(question);
     }
 
-    /**
-     * Deletes a question
-     */
     @Transactional
     @CacheEvict(value = {"examQuestions", "examQuestionsStudent", "questionStatistics"}, allEntries = true)
     public void deleteQuestion(UUID questionId, Authentication authentication) {
+        log.info("Attempting to delete questionId: {}", questionId);
         Question question = questionRepository.findById(questionId)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "Question not found with id: " + questionId));
-
-        // Verify ownership
+                .orElseThrow(() -> new ResourceNotFoundException("Question not found with id: " + questionId));
         ExamDTO exam = getExamOrThrow(question.getExamId());
         verifyExamOwnership(exam, authentication);
-
         questionRepository.delete(question);
-        log.info("Question deleted: {} from exam: {} by user: {}",
-                questionId, question.getExamId(), JwtUtils.getUsername(authentication));
+        log.info("Successfully deleted questionId: {}", questionId);
     }
 
-    /**
-     * Bulk creates multiple questions
-     */
     @Transactional
     @CacheEvict(value = {"examQuestions", "examQuestionsStudent", "questionStatistics"}, allEntries = true)
     public List<QuestionDTO> bulkCreateQuestions(BulkCreateQuestionsRequest request, Authentication authentication) {
         log.info("Starting bulk creation of {} questions", request.getQuestions().size());
-
         List<QuestionDTO> createdQuestions = new ArrayList<>();
         List<String> errors = new ArrayList<>();
 
         for (int i = 0; i < request.getQuestions().size(); i++) {
             CreateQuestionRequest questionRequest = request.getQuestions().get(i);
             try {
-                QuestionDTO created = createQuestion(questionRequest, authentication);
-                createdQuestions.add(created);
+                createdQuestions.add(createQuestion(questionRequest, authentication));
             } catch (Exception e) {
-                String error = String.format("Failed to create question %d for exam %s: %s",
-                        i + 1, questionRequest.getExamId(), e.getMessage());
+                String error = String.format("Failed to create question %d for exam %s: %s", i + 1, questionRequest.getExamId(), e.getMessage());
                 errors.add(error);
                 log.error(error, e);
             }
         }
-
-        log.info("Bulk creation completed: {} successful, {} failed",
-                createdQuestions.size(), errors.size());
-
+        log.info("Bulk creation completed: {} successful, {} failed", createdQuestions.size(), errors.size());
         if (!errors.isEmpty() && createdQuestions.isEmpty()) {
             throw new BadRequestException("All questions failed to create: " + String.join("; ", errors));
         }
-
         return createdQuestions;
     }
 
-    /**
-     * Deletes all questions for an exam
-     */
     @Transactional
     @CacheEvict(value = {"examQuestions", "examQuestionsStudent", "questionStatistics"}, key = "#examId")
     public void deleteAllExamQuestions(UUID examId, Authentication authentication) {
+        log.info("Attempting to delete all questions for examId: {}", examId);
         ExamDTO exam = getExamOrThrow(examId);
         verifyExamOwnership(exam, authentication);
-
         long count = questionRepository.countByExamId(examId);
         questionRepository.deleteByExamId(examId);
-
-        log.info("Deleted {} questions for exam: {} by user: {}",
-                count, examId, JwtUtils.getUsername(authentication));
+        log.info("Successfully deleted {} questions for examId: {}", count, examId);
     }
 
-    /**
-     * Gets total question count for an exam
-     */
     public Long getQuestionCount(UUID examId) {
-        Long count = questionRepository.countByExamId(examId);
-        log.debug("Question count for exam {}: {}", examId, count);
-        return count;
+        log.debug("Fetching question count for examId: {}", examId);
+        return questionRepository.countByExamId(examId);
     }
 
-    /**
-     * Gets total marks for all questions in an exam
-     */
     public Integer getTotalMarks(UUID examId) {
+        log.debug("Fetching total marks for examId: {}", examId);
         Integer total = questionRepository.sumMarksByExamId(examId);
-        int marks = total != null ? total : 0;
-        log.debug("Total marks for exam {}: {}", examId, marks);
-        return marks;
+        return (total != null) ? total : 0;
     }
 
-    /**
-     * Gets detailed statistics about exam questions
-     */
     @Cacheable(value = "questionStatistics", key = "#examId")
     public QuestionStatisticsDTO getExamStatistics(UUID examId) {
-        log.debug("Calculating statistics for exam: {}", examId);
-
-        Long totalQuestions = questionRepository.countByExamId(examId);
+        log.info("Calculating statistics for examId: {}", examId);
+        Long totalQuestions = getQuestionCount(examId);
         Integer totalMarks = getTotalMarks(examId);
-
-        // Count by type
-        Long mcqCount = questionRepository.countByExamIdAndType(examId, QuestionType.MCQ);
-        Long trueFalseCount = questionRepository.countByExamIdAndType(examId, QuestionType.TRUE_FALSE);
-        Long shortAnswerCount = questionRepository.countByExamIdAndType(examId, QuestionType.SHORT_ANSWER);
-        Long essayCount = questionRepository.countByExamIdAndType(examId, QuestionType.ESSAY);
-
-        // Count by difficulty
-        Long easyCount = questionRepository.countByExamIdAndDifficultyLevel(examId, DifficultyLevel.EASY);
-        Long mediumCount = questionRepository.countByExamIdAndDifficultyLevel(examId, DifficultyLevel.MEDIUM);
-        Long hardCount = questionRepository.countByExamIdAndDifficultyLevel(examId, DifficultyLevel.HARD);
-
-        QuestionStatisticsDTO stats = QuestionStatisticsDTO.builder()
+        return QuestionStatisticsDTO.builder()
                 .examId(examId)
                 .totalQuestions(totalQuestions)
                 .totalMarks(totalMarks)
-                .mcqCount(mcqCount)
-                .trueFalseCount(trueFalseCount)
-                .shortAnswerCount(shortAnswerCount)
-                .essayCount(essayCount)
-                .easyCount(easyCount)
-                .mediumCount(mediumCount)
-                .hardCount(hardCount)
+                .mcqCount(questionRepository.countByExamIdAndType(examId, QuestionType.MCQ))
+                .trueFalseCount(questionRepository.countByExamIdAndType(examId, QuestionType.TRUE_FALSE))
+                .shortAnswerCount(questionRepository.countByExamIdAndType(examId, QuestionType.SHORT_ANSWER))
+                .essayCount(questionRepository.countByExamIdAndType(examId, QuestionType.ESSAY))
+                .easyCount(questionRepository.countByExamIdAndDifficultyLevel(examId, DifficultyLevel.EASY))
+                .mediumCount(questionRepository.countByExamIdAndDifficultyLevel(examId, DifficultyLevel.MEDIUM))
+                .hardCount(questionRepository.countByExamIdAndDifficultyLevel(examId, DifficultyLevel.HARD))
                 .build();
-
-        log.debug("Statistics for exam {}: {} questions, {} marks", examId, totalQuestions, totalMarks);
-        return stats;
     }
 
-    /**
-     * Reorders questions in an exam
-     */
     @Transactional
     @CacheEvict(value = {"examQuestions", "examQuestionsStudent"}, key = "#examId")
     public List<QuestionDTO> reorderQuestions(UUID examId, List<UUID> questionIds, Authentication authentication) {
+        log.info("Reordering {} questions for examId: {}", questionIds.size(), examId);
         ExamDTO exam = getExamOrThrow(examId);
         verifyExamOwnership(exam, authentication);
-
-        log.info("Reordering {} questions for exam: {}", questionIds.size(), examId);
-
         List<QuestionDTO> reordered = new ArrayList<>();
         for (int i = 0; i < questionIds.size(); i++) {
             UUID questionId = questionIds.get(i);
             Question question = questionRepository.findById(questionId)
-                    .orElseThrow(() -> new ResourceNotFoundException(
-                            "Question not found: " + questionId));
-
+                    .orElseThrow(() -> new ResourceNotFoundException("Question not found: " + questionId));
             if (!question.getExamId().equals(examId)) {
-                throw new BadRequestException(
-                        "Question " + questionId + " does not belong to exam " + examId);
+                throw new BadRequestException("Question " + questionId + " does not belong to exam " + examId);
             }
-
             question.setOrderIndex(i + 1);
             question = questionRepository.save(question);
             reordered.add(mapToDTO(question));
         }
-
-        log.info("Successfully reordered {} questions for exam: {}", questionIds.size(), examId);
+        log.info("Successfully reordered {} questions for examId: {}", questionIds.size(), examId);
         return reordered;
     }
 
-    // ==================== Private Helper Methods ====================
-
-    /**
-     * Validates question creation request
-     */
     private void validateQuestion(CreateQuestionRequest request) {
-        // Validate MCQ/Multiple Answer
         if (request.getType() == QuestionType.MCQ || request.getType() == QuestionType.MULTIPLE_ANSWER) {
             if (request.getOptions() == null || request.getOptions().size() < 2) {
-                throw new BadRequestException("MCQ questions must have at least 2 options");
+                throw new BadRequestException("MCQ/Multiple Answer questions must have at least 2 options.");
             }
             if (request.getCorrectAnswer() == null || request.getCorrectAnswer().isBlank()) {
-                throw new BadRequestException("MCQ questions must have a correct answer");
+                throw new BadRequestException("MCQ/Multiple Answer questions must have a correct answer.");
             }
         }
-
-        // Validate True/False
         if (request.getType() == QuestionType.TRUE_FALSE) {
-            if (request.getCorrectAnswer() == null || request.getCorrectAnswer().isBlank()) {
-                throw new BadRequestException("True/False question must have an answer");
-            }
-            String answer = request.getCorrectAnswer().toUpperCase();
-            if (!answer.equals("TRUE") && !answer.equals("FALSE")) {
-                throw new BadRequestException("True/False question answer must be TRUE or FALSE");
+            if (request.getCorrectAnswer() == null || !List.of("TRUE", "FALSE").contains(request.getCorrectAnswer().toUpperCase())) {
+                throw new BadRequestException("True/False question answer must be TRUE or FALSE.");
             }
         }
-
-        // Validate marks
         if (request.getMarks() <= 0) {
-            throw new BadRequestException("Question marks must be greater than 0");
+            throw new BadRequestException("Question marks must be greater than 0.");
         }
     }
 
-    /**
-     * Validates question update
-     */
     private void validateQuestionUpdate(Question question) {
         if (question.getType() == QuestionType.MCQ || question.getType() == QuestionType.MULTIPLE_ANSWER) {
             if (question.getOptions() == null || question.getOptions().size() < 2) {
-                throw new BadRequestException("MCQ questions must have at least 2 options");
+                throw new BadRequestException("MCQ/Multiple Answer questions must have at least 2 options.");
             }
         }
-
         if (question.getType() == QuestionType.TRUE_FALSE && question.getCorrectAnswer() != null) {
-            String answer = question.getCorrectAnswer().toUpperCase();
-            if (!answer.equals("TRUE") && !answer.equals("FALSE")) {
-                throw new BadRequestException("True/False question answer must be TRUE or FALSE");
+            if (!List.of("TRUE", "FALSE").contains(question.getCorrectAnswer().toUpperCase())) {
+                throw new BadRequestException("True/False question answer must be TRUE or FALSE.");
             }
         }
     }
 
-    /**
-     * Fetches exam from Exam Service via Feign
-     */
     private ExamDTO getExamOrThrow(UUID examId) {
         try {
-            log.debug("Fetching exam {} from Exam Service", examId);
+            log.debug("Fetching exam details from exam-service for examId: {}", examId);
             ApiResponse<ExamDTO> response = examServiceClient.getExam(examId);
-
             if (response != null && response.isSuccess() && response.getData() != null) {
-                log.debug("Successfully fetched exam: {}", response.getData().getTitle());
+                log.debug("Successfully fetched exam details for examId: {}", examId);
                 return response.getData();
             }
-
-            log.warn("Exam {} not found or invalid response", examId);
-            throw new ResourceNotFoundException("Exam not found with id: " + examId);
-
-        } catch (FeignException.NotFound e) {
-            log.error("Exam {} not found in Exam Service", examId);
+            log.error("Invalid or unsuccessful response from exam-service for examId: {}. Response: {}", examId, response);
             throw new ResourceNotFoundException("Exam not found with id: " + examId);
         } catch (FeignException e) {
-            log.error("Feign error while fetching exam {}: {} - {}", examId, e.status(), e.getMessage());
-            throw new BadRequestException("Unable to verify exam: " + e.getMessage());
-        } catch (Exception e) {
-            log.error("Unexpected error while fetching exam {}", examId, e);
-            throw new ResourceNotFoundException("Exam not found with id: " + examId);
+            log.error("Feign client error while fetching exam {}: Status {}, Body {}", examId, e.status(), e.contentUTF8(), e);
+            throw new ServiceException("Failed to fetch exam details due to a service communication error.");
         }
     }
 
-    /**
-     * Verifies that the current user owns the exam or is an admin
-     */
     private void verifyExamOwnership(ExamDTO exam, Authentication authentication) {
         UUID currentUserId = JwtUtils.getUserId(authentication);
         String role = JwtUtils.getRole(authentication);
 
-        log.debug("Verifying exam ownership - Exam Teacher: {}, Current User: {}, Role: {}",
-                exam.getTeacherId(), currentUserId, role);
-
-        // Admin can access any exam
         if ("ROLE_ADMIN".equals(role)) {
-            log.debug("User is admin - access granted");
+            log.debug("Admin user {} granted access to exam {}", currentUserId, exam.getId());
             return;
         }
-
-        // Check if user is the exam creator
         if (exam.getTeacherId() == null || !exam.getTeacherId().equals(currentUserId)) {
-            log.warn("User {} does not have permission for exam {}", currentUserId, exam.getId());
-            throw new UnauthorizedException("You don't have permission to modify questions for this exam");
+            log.warn("Unauthorized access attempt on exam {} by user {}. Exam is owned by {}.", exam.getId(), currentUserId, exam.getTeacherId());
+            throw new UnauthorizedException("You do not have permission to modify questions for this exam.");
         }
-
-        log.debug("Ownership verified - user {} owns exam {}", currentUserId, exam.getId());
     }
-
-    /**
-     * Maps Question entity to QuestionDTO
-     */
+    
     private QuestionDTO mapToDTO(Question question) {
         return QuestionDTO.builder()
                 .id(question.getId())
@@ -453,21 +316,18 @@ public class QuestionService {
                 .explanation(question.getExplanation())
                 .difficultyLevel(question.getDifficultyLevel())
                 .imageUrl(question.getImageUrl())
-                .createdBy(question.getCreatedBy())
+                .createdBy(null) // Since createdBy is not in the entity
                 .createdAt(question.getCreatedAt())
                 .updatedAt(question.getUpdatedAt())
                 .build();
     }
 
-    /**
-     * Maps Question entity to StudentQuestionDTO (without answers)
-     */
     private StudentQuestionDTO mapToStudentDTO(Question question) {
         return StudentQuestionDTO.builder()
                 .id(question.getId())
                 .questionText(question.getQuestionText())
                 .type(question.getType())
-                .marks(question.getMarks())
+                .marks(Optional.ofNullable(question.getMarks()).orElse(0)) // Handle null marks
                 .orderIndex(question.getOrderIndex())
                 .options(question.getOptions())
                 .difficultyLevel(question.getDifficultyLevel())
